# mcmultiplayercontroller

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs
install-scripts/: PKGBUILD
proto/: controllerp.proto  mcmultiplayer.proto
proto/startup_system/systemd/: mchostd.service
res/: mchostd.service
src/: controller.rs  discord_bot.rs  lib.rs  main.rs  mchost.rs  mchost_unix_stream.rs  mchostd.rs  wol.rs
src/commands/: mod.rs  server_status.rs  start_server.rs
src/mchost/: constants.rs  grpc_orchestrator_connection.rs  mod.rs  server.rs  server_installation.rs  server_installations.rs  servers_manager.rs  system_shutdown.rs
src/network_utils/: mod.rs  wake_on_lan.rs
src/orchestrator/: constants.rs  mod.rs
src/orchestrator/discord_bot/: discord_command_adapter.rs  mod.rs
src/orchestrator/discord_bot/commands/: mod.rs  server_status.rs  start_server.rs
src/orchestrator/grpc_server/: controller.rs  grpc_host_manager.rs  mod.rs
