[package]
name = "mcmultiplayercontroller"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive", "serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
tokio-stream = { version = "0.1.14", features = ["sync", "fs"] }
serenity = { version = "0.11", default-features=false, features=["client", "gateway", "rustls_backend", "model"]}
dotenvy = "0.15.7"
tonic = "0.9.2"
prost = "0.11.9"
futures-core = "0.3.28"
futures-util = "0.3.28"
futures = "0.3.28"
regex = "1.7.3"
lazy_static = "1.4.0"
tokio-util = "0.7.7"
wake-on-lan = "0.2.0"
async-trait = "0.1.68"
dirs = "5.0.1"
once_cell = "1.18.0"

[build-dependencies]
tonic-build = "0.9.1"

# [[bin]]
# name="orchestrator"
# path="src/orchestrator.rs"

# [[bin]]
# name="mchostd"
# path="src/mchostd.rs"

# [[bin]]
# name="mchost"
# path="src/mchost.rs"
